core/hop/include/hop.h


#define HOP_ABI_VERSION 6
typedef struct HopNode HopNode;
uint32_t hop_abi_version(void);
const struct HopNode *hop_node_new(void);
const struct HopNode *hop_node_with_secret(const uint8_t *secret, uintptr_t secret_len);
void hop_node_free(const struct HopNode *node);
bool hop_node_address(const struct HopNode *node, uint8_t *out);
void hop_node_tick(const struct HopNode *node, uint64_t now_ms);
void hop_link_up(const struct HopNode *node, uint64_t link, uint32_t role);
void hop_bytes_received(const struct HopNode *node,
                        uint64_t link,
                        const uint8_t *data,
                        uintptr_t len);
void hop_link_down(const struct HopNode *node, uint64_t link);
void hop_drain_outgoing(const struct HopNode *node, void (*sink)(void *ctx,
                                                                 uint64_t link,
                                                                 const uint8_t *bytes,
                                                                 uintptr_t len), void *ctx);
void hop_subscribe(const struct HopNode *node, const char *topic);
bool hop_publish_prekey(const struct HopNode *node);
void hop_poll_inbox(const struct HopNode *node,
                    bool (*sink)(void *ctx,
                                 const uint8_t *inbox_id,
                                 const uint8_t *from,
                                 const char *content_type,
                                 const uint8_t *body,
                                 uintptr_t body_len,
                                 uint8_t hops,
                                 uint64_t created_at),
                    void *ctx);
bool hop_accept_inbox(const struct HopNode *node, const uint8_t *inbox_id);
bool hop_send_service_request(const struct HopNode *node,
                              const uint8_t *dst,
                              const char *service,
                              const char *method,
                              const uint8_t *args,
                              uintptr_t args_len,
                              uint8_t *out_id);
bool hop_send_service_response(const struct HopNode *node,
                               const uint8_t *to,
                               const uint8_t *for_request_id,
                               uint16_t status,
                               const uint8_t *body,
                               uintptr_t body_len);
void hop_cluster_join(const struct HopNode *node,
                      const uint8_t *secret);
void hop_cluster_join_passphrase(const struct HopNode *node,
                                 const uint8_t *pass,
                                 uintptr_t pass_len);
uint32_t hop_cluster_members(const struct HopNode *node);
void hop_cluster_set_quorum(const struct HopNode *node,
                            uint32_t min_live_members);
void hop_poll_service_requests(const struct HopNode *node,
                               void (*sink)(void *ctx,
                                            const uint8_t *from,
                                            const uint8_t *request_id,
                                            const char *service,
                                            const char *method,
                                            const uint8_t *args,
                                            uintptr_t args_len),
                               void *ctx);
void hop_poll_service_responses(const struct HopNode *node,
                                bool (*sink)(void *ctx,
                                             const uint8_t *from,
                                             const uint8_t *for_request_id,
                                             uint16_t status,
                                             const uint8_t *body,
                                             uintptr_t body_len),
                                void *ctx);
bool hop_accept_service_response(const struct HopNode *node, const uint8_t *request_id);
void hop_poll_hps_messages(const struct HopNode *node, bool (*sink)(void *ctx,
                                                                    const uint8_t *id,
                                                                    const char *path,
                                                                    const uint8_t *sender,
                                                                    const uint8_t *body,
                                                                    uintptr_t body_len), void *ctx);
void hop_poll_hps_invites(const struct HopNode *node, void (*sink)(void *ctx,
                                                                   const uint8_t *host,
                                                                   const char *path,
                                                                   uint32_t kind), void *ctx);
uintptr_t hop_hps_pending(const struct HopNode *node,
                          const char *path,
                          void (*sink)(void *ctx, const uint8_t *addr),
                          void *ctx);
uintptr_t hop_hps_rekey(const struct HopNode *node,
                        const char *path,
                        const char *new_path,
                        const uint8_t *remove,
                        uintptr_t remove_count,
                        void (*sink)(void *ctx, const uint8_t *id),
                        void *ctx);
uintptr_t hop_hps_members(const struct HopNode *node,
                          const char *path,
                          void (*sink)(void *ctx, const uint8_t *addr),
                          void *ctx);
uintptr_t hop_hps_my_topics(const struct HopNode *node, void (*sink)(void *ctx,
                                                                     const uint8_t *host,
                                                                     const char *path,
                                                                     uint32_t kind,
                                                                     bool hosting,
                                                                     uint32_t access), void *ctx);
uintptr_t hop_hps_browse(const struct HopNode *node, void (*sink)(void *ctx,
                                                                  const uint8_t *host,
                                                                  const char *path,
                                                                  uint32_t kind,
                                                                  const char *title,
                                                                  const char *summary,
                                                                  uint32_t access), void *ctx);
uintptr_t hop_address_to_base58(const uint8_t *addr, char *out, uintptr_t out_cap);
bool hop_address_from_base58(const char *text, uint8_t *out32);
void hop_sign_reach_record(const struct HopNode *node,
                           const char *endpoint,
                           uint32_t ttl_secs,
                           void (*sink)(void *ctx, const uint8_t *bytes, uintptr_t len),
                           void *ctx);
bool hop_verify_reach_record(const uint8_t *bytes,
                             uintptr_t len,
                             uint64_t now_secs,
                             void (*sink)(void *ctx,
                                          const uint8_t *address,
                                          const char *endpoint,
                                          uint64_t issued_at,
                                          uint32_t ttl_secs),
                             void *ctx);